# confluence-python-cli

./: .gitignore  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py
confluenceclient/: __init__.py  formatter.py  shell.py
confluenceclient/api/: client.py  exceptions.py  proxy.py
confluenceclient/api/auth/: client.py
confluenceclient/api/group/: client.py
confluenceclient/api/page/: client.py
confluenceclient/api/space/: client.py
confluenceclient/api/user/: client.py
confluenceclient/command/: group.py  page.py  space.py  user.py
confluenceclient/command/common/: lister.py
confluenceclient/plugins/: manager.py
confluenceclient/plugins/credentials/: __init__.py
confluenceclient/plugins/credentials/keyring/: plugin.py
confluenceclient/plugins/credentials/volatile/: plugin.py
confluenceclient/plugins/export/: __init__.py
confluenceclient/plugins/export/pdf/: plugin.py
docs/plugins/credentials/keyring/: README.rst
docs/plugins/credentials/volatile/: README.rst
docs/plugins/export/pdf/: README.rst
