[metadata]
name = confluence-cli
version = 0.1.0
license = GPLv3
summary = Confluence Command-line Client
description-file =
    README.rst
author = Xavier Lucas
maintainer = Xavier Lucas
author-email = xavier_lucas@ymail.com
home-page = https://github.com/xlucas/confluence-python-cli
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    confluenceclient

[entry_points]
console_scripts =
    confluence = confluenceclient.shell:main

confluence.cli =
    group_add = confluenceclient.command.group:Add
    group_list = confluenceclient.command.group:List
    group_remove = confluenceclient.command.group:Remove
    group_member_add = confluenceclient.command.group:MemberAdd
    group_member_list = confluenceclient.command.group:MemberList
    group_member_remove = confluenceclient.command.group:MemberRemove
    page_add = confluenceclient.command.page:Add
    page_content = confluenceclient.command.page:Content
    page_copy = confluenceclient.command.page:Copy
    page_crawl = confluenceclient.command.page:Crawl
    page_list = confluenceclient.command.page:List
    page_remove = confluenceclient.command.page:Remove
    page_summary = confluenceclient.command.page:Summary
    page_update = confluenceclient.command.page:Update
    space_add = confluenceclient.command.space:Add
    space_list = confluenceclient.command.space:List
    space_remove = confluenceclient.command.space:Remove
    user_add = confluenceclient.command.user:Add
    user_deactivate = confluenceclient.command.user:Deactivate
    user_info = confluenceclient.command.user:Info
    user_list = confluenceclient.command.user:List
    user_reactivate = confluenceclient.command.user:Reactivate
    user_remove = confluenceclient.command.user:Remove
    user_update = confluenceclient.command.user:Update

confluence.cli.plugins =
	credentials = confluenceclient.plugins.credentials
